--- a/runner-template.html
+++ b/runner-template.html
@@ -9,8 +9,10 @@
   <script type="text/javascript" src="<%= lib %>/lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="<%= lib %>/lib/jasmine-1.3.1/jasmine-html.js"></script>
 
+  <%= extensions %>
   <%= specs %>
 
+    
   <script type="text/javascript">
     (function() {
       var jasmineEnv = jasmine.getEnv();
