--- a/runner-template.html
+++ b/runner-template.html
@@ -1,49 +1,32 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-  <title>Jasmine Spec Runner</title>
+    <head>
+        <title>Jasmine Spec Runner</title>
 
-  <link rel="shortcut icon" type="image/png" href="<%= lib %>/lib/jasmine-1.3.1/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="<%= lib %>/lib/jasmine-1.3.1/jasmine.css">
-  <script type="text/javascript" src="<%= lib %>/lib/jasmine-1.3.1/jasmine.js"></script>
-  <script type="text/javascript" src="<%= lib %>/lib/jasmine-1.3.1/jasmine-html.js"></script>
+        <link rel="shortcut icon" type="image/png" href="<%= lib %>/lib/jasmine-2.1.3/jasmine_favicon.png">
+        <link rel="stylesheet" type="text/css" href="<%= lib %>/lib/jasmine-2.1.3/jasmine.css">
+        <script type="text/javascript" src="<%= lib %>/lib/jasmine-2.1.3/jasmine.js"></script>
+        <script type="text/javascript" src="<%= lib %>/lib/jasmine-2.1.3/jasmine-html.js"></script>
+        <script type="text/javascript" src="<%= lib %>/lib/jasmine-2.1.3/boot.js"></script>
 
-  <%= extensions %>
-  <%= specs %>
+        <script type="text/javascript" src="<%= lib %>/requirejs/require.js"></script>
 
-    
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
+        <script type="text/javascript">
+            var startTests = window.onload;
+            window.onload = null;
 
-      var htmlReporter = new jasmine.HtmlReporter();
+            <%= requireConfig %>
 
-      jasmineEnv.addReporter(htmlReporter);
+            require([
+                <%= specs %>
+            ], function() {
+                  startTests();
+            });
 
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
+        </script>
 
-      var currentWindowOnload = window.onload;
+    </head>
 
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        execJasmine();
-      };
-
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
-
-    })();
-  </script>
-
-</head>
-
-<body>
-</body>
+    <body>
+    </body>
 </html>
